--- a/HolidaysSite/HolidaysSite.csproj
+++ b/HolidaysSite/HolidaysSite.csproj
@@ -293,7 +293,7 @@
     <Content Include="Views\Images\Create.cshtml" />
     <Content Include="Views\Images\Edit.cshtml" />
     <Content Include="Views\Images\Index.cshtml" />
-    <Content Include="Views\HappyTogether\PartialWork.cshtml" />
+    <Content Include="Views\HappyTogether\PartialIMage.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\Upload\" />
